# adsignal

./: .env.example  .gitignore  ECC_USAGE.md  Makefile  README.md  pyproject.toml  rxconfig.py
.github/workflows/: ci.yml
adsignal/: __init__.py  catalog.py  config.py  definitions.py  etl_pandas.py  lakehouse_dns.py  schedules.py  security.py
adsignal/assets/: brief_assets.py  ingest_assets.py  model_assets.py  spark_assets.py
adsignal/ingest/: google_client.py  meta_client.py  mongo_writer.py  synthetic.py
adsignal/llm/: narrative.py  prompts.py  provider.py
adsignal/models/: anomaly.py  forecaster.py  signal_builder.py
adsignal/resources/: iceberg_resource.py  mongo_resource.py  spark_resource.py
adsignal/spark/: etl.py  java.py  schemas.py  session.py  transforms.py
api/: main.py  models.py
api/routes/: briefs.py  signals.py  snapshots.py
dashboard/: app.py  charts.py  dashboard.py  sample_data.py
docker/: docker-compose.yml  lakekeeper-config.yaml  mongo-init.js
reflex.lock/: package.json
scripts/: bootstrap_iceberg.py  check_java.sh  demo_timetravel.py  ecc_security_scan.py  run_etl.py  seed_mongo.py
tests/: conftest.py  test_anomaly.py  test_api.py  test_dashboard.py  test_etl_pandas.py  test_forecaster.py  test_narrative.py  test_security.py  test_spark_env.py  test_synthetic.py  test_transforms.py
